--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,7 +34,8 @@ jobs:
         DISPLAY: ':99'  # 设置无头浏览器显示
       run: |
         Xvfb :99 -ac &
-        python web2rss/gen_rss.py  # 运行你的Python脚本
+        cd web2rss
+        python gen_rss.py  # 运行你的Python脚本
     - name: Commit and push changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 使用GITHUB_TOKEN
