--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add rss/*
+        git add web2rss/rss/*
         git commit -m "Update RSS feeds"
         git remote set-url --push origin https://$GITHUB_TOKEN@github.com/bhnan/tools.git
         git push origin main
