--- a/web2rss/config.json
+++ b/web2rss/config.json
@@ -1,7 +1,7 @@
 {
     "sites": [
         {
-            "name": "anthropic_news",
+            "name": "anthropic_researchs",
             "follow_desc": "feedId:71805759203098624+userId:71370844472670208",
             "url": "https://www.anthropic.com/research",
             "block_css": "a.PostCard_post-card___tQ6w",
